--- a/app/src/main/res/layout/tap1layout.xml
+++ b/app/src/main/res/layout/tap1layout.xml
@@ -59,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:stretchMode="columnWidth"s
+            android:stretchMode="columnWidth"
             android:verticalSpacing="2dp"
             android:horizontalSpacing="2dp"
             android:numColumns="auto_fit"
