--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -114,6 +114,6 @@
         android:layout_height="wrap_content"
         android:indeterminate="true"
         android:max="100"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/colorPrimary"
         android:layout_marginTop="-7dp"/>
 </RelativeLayout>
